--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -52,6 +52,14 @@ jar. Therefore, pet-clinic-data has its own jar-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
