--- a/pom.xml
+++ b/pom.xml
@@ -25,25 +25,25 @@
 	<dependencies>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<goals>install</goals>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<scm>
-		<developerConnection>
-			scm:git:git@github.com:jasdevsidhu12/sfg-pet-clinic.git
-		</developerConnection>
-	  <tag>sfg-pet-clinic-0.0.1</tag>
-  </scm>
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-release-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<goals>install</goals>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
+<!--	<scm>-->
+<!--		<developerConnection>-->
+<!--			scm:git:git@github.com:jasdevsidhu12/sfg-pet-clinic.git-->
+<!--		</developerConnection>-->
+<!--	  <tag>sfg-pet-clinic-0.0.1</tag>-->
+<!--  </scm>-->
 </project>
